--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "lint:client": "ng lint",
     "lint:server": "tslint './server/**/*.ts' -c ./server/tslint.json --fix",
     "test:client": "ng test",
+    "test:server": "mocha dist/server/test",
+    "test:serverTypescript": "mocha -r ts-node/register server/test/hello.ts",
     "e2e:client": "ng e2e",
     "build": "ng build --prod --sm=false --aot=true --output-path=dist/client && npm run _server:build",
     "_server:run": "tsc -p ./server && concurrently \"tsc -w -p ./server\" \"nodemon dist/server/bin/www.js\" \"cp server/api/swagger.yaml dist/server/api/swagger.yaml\" ",
@@ -41,7 +43,6 @@
     "@types/compression": "^0.0.33",
     "@types/cors": "^2.8.1",
     "@types/express": "^4.0.35",
-    "@types/jasmine": "2.5.38",
     "@types/js-yaml": "^3.5.30",
     "@types/jsonwebtoken": "^7.2.0",
     "@types/log4js": "0.0.32",
@@ -49,6 +50,7 @@
     "@types/swaggerize-express": "^4.0.28",
     "@types/uuid": "^2.0.29",
     "body-parser": "~1.17.1",
+    "chai": "^3.5.0",
     "compression": "^1.6.2",
     "cookie-parser": "~1.3.5",
     "core-js": "^2.4.1",
@@ -72,10 +74,13 @@
     "zone.js": "^0.8.9"
   },
   "devDependencies": {
+    "@types/chai": "^3.5.2",
+    "@types/chai-http": "0.0.30",
+    "@types/mocha": "^2.2.41",
+    "chai": "^3.5.0",
+    "chai-http": "^3.0.0",
     "codelyzer": "~2.1.1",
     "concurrently": "^3.1.0",
-    "jasmine-core": "~2.5.2",
-    "jasmine-spec-reporter": "~3.2.0",
     "karma": "~1.5.0",
     "karma-chrome-launcher": "~2.0.0",
     "karma-cli": "~1.0.1",
@@ -83,6 +88,8 @@
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "karma-remap-istanbul": "^0.2.1",
+    "mocha": "^3.4.2",
+    "mocha-typescript": "^1.1.4",
     "nodemon": "^1.11.0",
     "protractor": "~5.1.0",
     "webdriver-manager": "10.2.5"
